--- a/custom_components/school_holidays/manifest.json
+++ b/custom_components/school_holidays/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "school_holidays",
-  "name": "School Vacation Times",
+  "name": "Israel School Vacation Times",
   "documentation": "https://github.com/rt400/School-Vacation",
   "dependencies": [],
   "codeowners": ["@yuval_mejahez"],
