Add version key

--- a/custom_components/school_holidays/manifest.json
+++ b/custom_components/school_holidays/manifest.json
@@ -2,6 +2,7 @@
   "domain": "school_holidays",
   "name": "Israel School Vacation Times",
   "documentation": "https://github.com/rt400/School-Vacation",
+  "version": "2.0.1",
   "dependencies": [],
   "codeowners": ["@yuval_mejahez"],
   "requirements": []
